/*
 * Copyright 2023-2025 JetBrains s.r.o and contributors. Use of this source code is governed by the Apache 2.0 license.
 */

package kotlinx.rpc.grpc.internal

internal actual fun WireSize.int32(value: Int): UInt {
    TODO("Not yet implemented")
}

internal actual fun WireSize.int64(value: Long): UInt {
    TODO("Not yet implemented")
}

internal actual fun WireSize.uInt32(value: UInt): UInt {
    TODO("Not yet implemented")
}

internal actual fun WireSize.uInt64(value: ULong): UInt {
    TODO("Not yet implemented")
}

internal actual fun WireSize.sInt32(value: Int): UInt {
    TODO("Not yet implemented")
}

internal actual fun WireSize.sInt64(value: Long): UInt {
    TODO("Not yet implemented")
}